--- a/vue/package.json
+++ b/vue/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "vue": "^3.2.25",
-    "vue-axios": "^3.4.1"
+    "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
-    "vite": "^2.9.9",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint": "^8.16.0",
+    "eslint-plugin-vue": "^7.20.0",
+    "vite": "^2.9.9"
   }
 }
